tweet display implemented

--- a/twitter/Keys.plist
+++ b/twitter/Keys.plist
@@ -3,8 +3,8 @@
 <plist version="1.0">
 <dict>
 	<key>consumer_Key</key>
-	<string>pgiOBOqhvPZEvmnABSrKhIvxg</string>
-	<key>cosumer_Secret</key>
-	<string>FMEpNi3COjY71pIZqZ8VpSM83iyhBczEAXZUeP5wKCEdhIwm7v</string>
+	<string>bLPMzzcUq76xdaMTfYOQmpm1x</string>
+	<key>consumer_Secret</key>
+	<string>JN3wqIkGSvx0t0sasLH2LEzU0EsWi1G7u2mc0C15VM70WekPJG</string>
 </dict>
 </plist>
